# bitu

./: .gitignore  Makefile  Makefile.am  NEWS  README  README.md  TODO  configure.ac  libbitu.pc.in  main.c
include/: Makefile.am
include/bitu/: Makefile.am  app.h  conf.h  errors.h  loader.h  server.h  transport.h  util.h
include/slclient/: Makefile.am  loader.h  util.h
plugins/: Makefile.am
plugins/cpuinfo/: Makefile.am  cpuinfo.c  cpuinfo.h  test.c
plugins/hello/: Makefile.am  hello.c  hello.h  test.c
plugins/processor/: Makefile.am  processor.c  processor.h  test.c
plugins/uptime/: Makefile.am  test.c  uptime.c  uptime.h
src/: Makefile.am  app.c  app.h  bitu.conf.dist  conf.c  loader.c  main.c  server-commands.c  server-priv.h  server.c  shell.c  test-conf.c  test-plugin.c  test-server.c  test-transports.c  test-util.c  transport-irc.c  transport-local.c  transport-xmpp.c  transport.c  util.c
